packages/parser/test/parser/E0133.txt
a: 1
===== err =====
anonymous:1:3: ParseError: E0133 - Expected variable declaration type after name
1 | a: 1
  |   ^
